tests/scripts/errors/runtime/assign_to_const.cdo
CONST PI = 3.14;
PI = 2.71;
print(PI);
